# rci_avatar_project

./: MUJOCO_LOG.TXT  mujoco_launch.py
h1_2_description/: CMakeLists.txt  package.xml
h1_2_description/Materials/: Default.mat  dark.mat  white.mat
h1_2_description/config/inspire_hand/: inspire_hand.yml
h1_2_description/h1_2/: h1_2_main.xml  h1_2_manip.xml  scene.xml
h1_2_description/inspire_hand/: inspire_hand_left.yml  inspire_hand_left_dexpilot.yml  inspire_hand_right.yml  inspire_hand_right2.urdf
h1_2_description/meshes/: L_hand_base_link.prefab  R_hand_base_link.prefab  left_ankle_pitch_link.prefab  left_ankle_pitch_link_0.asset  left_ankle_roll_link.prefab  left_ankle_roll_link_0.asset  left_elbow_link.prefab  left_elbow_link_0.asset  left_elbow_link_1.asset  left_hip_pitch_link.prefab  left_hip_pitch_link_0.asset  left_hip_pitch_link_1.asset  left_hip_roll_link.prefab  left_hip_roll_link_0.asset  left_hip_yaw_link.prefab  left_hip_yaw_link_0.asset  left_knee_link.prefab  left_knee_link_0.asset  left_shoulder_pitch_link.prefab  left_shoulder_pitch_link_0.asset  left_shoulder_pitch_link_1.asset  left_shoulder_roll_link.prefab  left_shoulder_roll_link_0.asset  left_shoulder_roll_link_1.asset  left_shoulder_yaw_link.prefab  left_shoulder_yaw_link_0.asset  left_shoulder_yaw_link_1.asset  left_wrist_pitch_link.prefab  left_wrist_pitch_link_0.asset  left_wrist_roll_link.prefab  left_wrist_roll_link_0.asset  left_wrist_roll_link_1.asset  link11_L.prefab  link11_L_0.asset  link11_R.prefab  link11_R_0.asset  link12_L.prefab  link12_L_0.asset  link12_R.prefab  link12_R_0.asset  (+80 more)
inverse3/: CMakeLists.txt  package.xml
inverse3/python_samples/: 01_open_device.py  02_read_position.py  03_read_position_fixed_rate.py  04B_send_force_vibration.py  04_send_force.py  05_wall.py  06_ball.py  07_ball_with_visualisation.py  08_multithread_ball_with_visualisation copy.py  09_position_control.py  10_follow_trajectory.py  11_read_handle_info.py  12_read_handle_threaded.py  13_visualise_handle.py  14_read_versegrip_info.py  15_visualise_versegrip.py  README.md  requirements.txt
inverse3/src/: example.cpp
inverse3/src/examples/: auto_detect.cpp  combined.cpp  hello_wall.cpp  kinematic_measurement.cpp  print_handle.cpp  print_inverse3.cpp
rci_h12_controller/: CMakeLists.txt  package.xml
rci_h12_controller/include/rci_h12_controller/controller/: controller.hpp
rci_h12_controller/include/rci_h12_controller/robot/: robot_wrapper.hpp
rci_h12_controller/include/rci_h12_controller/simulator/: simulator.hpp
rci_h12_controller/include/rci_h12_controller/solver/: ik_solver.hpp
rci_h12_controller/include/rci_h12_controller/trajectory/: se3_traj.hpp
rci_h12_controller/include/rci_h12_controller/utils/: logger.hpp  math.hpp  utils.hpp
rci_h12_controller/src/: main.cpp
rci_h12_controller/src/controller/: controller.cpp
rci_h12_controller/src/robot/: robot_wrapper.cpp
rci_h12_controller/src/simulator/: simulator.cpp
rci_h12_controller/src/solver/: ik_solver.cpp
rci_h12_controller/src/trajectory/: se3_traj.cpp
rci_h12_teleop_manager/: package.xml  setup.cfg  setup.py
rci_h12_teleop_manager/config/inspire_hand/: inspire_hand_right.yml
rci_h12_teleop_manager/launch/: rci_h12_teleop.launch.py
rci_h12_teleop_manager/rci_h12_teleop_manager/: rb5_controller_node.py  rci_h12_teleop_arm_main.py  rci_h12_teleop_hand_main.py  unity_wrist_publisher.py
rci_h12_teleop_manager/rci_h12_teleop_manager/src/client/: kimm_client.py
rci_h12_teleop_manager/rci_h12_teleop_manager/src/controller/: controller.py
rci_h12_teleop_manager/rci_h12_teleop_manager/src/dex_retargeting/: HandRetargeting.py
rci_h12_teleop_manager/rci_h12_teleop_manager/src/robot/: h12_wrapper.py
rci_h12_teleop_manager/rci_h12_teleop_manager/src/server/: kimm_joint_posture_server.py  kimm_server.py  kimm_server234.py
rci_h12_teleop_manager/rci_h12_teleop_manager/src/solver/: qp_solver.py
